--- a/opendj/docker-compose.yml
+++ b/opendj/docker-compose.yml
@@ -1,11 +1,10 @@
 #Example of how to run OpenDJ with a custom configuration
-# This will mount the cts directory on the bootstrap - so we get a cts configuration
-# See README.md
+# test with docker-compose up --force-recreate
 opendj:
-  build: .
+  image: forgerock/opendj:nightly
   ports:
    - "389:389"
-  volumes:
-    - ./cts:/opt/opendj/bootstrap
+  environment:
+    BOOTSTRAP: /opt/opendj/bootstrap/cts/setup.sh
 # uncomment to create a persistent directory
 #    - /tmp/opendj:/opt/opendj/data
