--- a/openig/docker-compose.yml
+++ b/openig/docker-compose.yml
@@ -8,8 +8,8 @@
 # You can add host: entries below for Docker compose that will result
 # in /etc/host entries being created in the Docker image. As above,
 # These IP addresses must be resolvable from the docker image itself
-openig-nightly:
-  image: forgerock/openig:nightly
+openig:
+  build: .
   # 8080 is often used - so lets remap this to something else
   ports:
    - "5080:8080"
@@ -21,4 +21,4 @@ openig-nightly:
   # If you attempt to use a relative mount (not /Users/xxx, but xxx),
   # The volume is relative to the boot2docker VM machine, not your mac
   volumes:
-    - /Users/warren/.openig:/root/openig
+    - ./sample-config:/root/openig
