--- a/openidm/Dockerfile
+++ b/openidm/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /opt
 
 EXPOSE 8080
 
+ADD Dockerfile /
 
 # download openidm nightly build and unzip
 ADD openidm.zip /var/tmp/openidm.zip
@@ -14,15 +15,15 @@ RUN unzip /var/tmp/openidm.zip && \
    rm -f /var/tmp/openidm.zip  && rm -fr /opt/openidm/samples
 
 # Uncomment to use Postgres repo
-# Another option is to mount a new /conf/ dir instead - to take direct control
+# Another (better) option is to mount a new /conf/ dir instead - to take direct control
 #RUN mv /opt/openidm/conf/repo.orientdb.json  /opt/openidm/conf/repo.orientdb.json.bak
 #ADD repo.jdbc.json /opt/openidm/conf/repo.jdbc.json
 #ADD datasource.jdbc-default.json /opt/openidm/conf/datasource.jdbc-default.json
 
-# Remove custom startup once https://bugster.forgerock.org/jira/browse/OPENIDM-5435
-# is fixed
-ADD startup.sh /opt/openidm/startup.sh
+
+ADD run.sh /opt/openidm/run.sh
+ADD logging.properties /opt/openidm/logging.properties
 
 WORKDIR /opt/openidm
 
-CMD ["/opt/openidm/startup.sh"]
+CMD ["/opt/openidm/run.sh"]
