--- a/resty/Dockerfile
+++ b/resty/Dockerfile
@@ -6,13 +6,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libreadline-dev libncurses5-dev libpcre3-dev libssl-dev ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
-ENV OPENRESTY_VERSION 1.9.7.3
+ENV OPENRESTY_VERSION 1.9.7.4
 ENV OPENRESTY_PREFIX /opt/openresty
 ENV NGINX_PREFIX /opt/openresty/nginx
 ENV VAR_PREFIX /var/nginx
 
 # NginX prefix is automatically set by OpenResty to $OPENRESTY_PREFIX/nginx
 # look for $ngx_prefix in https://github.com/openresty/ngx_openresty/blob/master/util/configure
+
+# Options I removed:
+#     --with-ipv6 \
+
 
 RUN cd /root \
  && echo "==> Downloading OpenResty..." \
@@ -31,12 +35,12 @@ RUN cd /root \
     --lock-path=$VAR_PREFIX/nginx.lock \
     --with-luajit \
     --with-pcre-jit \
-    --with-ipv6 \
     --with-http_ssl_module \
     --without-http_ssi_module \
     --without-http_userid_module \
     --without-http_uwsgi_module \
     --without-http_scgi_module \
+    --with-ipv6 \
     -j${NPROC} \
  && echo "==> Building OpenResty..." \
  && make -j${NPROC} \
@@ -51,35 +55,32 @@ RUN cd /root \
  && rm -rf /root/ngx_openresty
 
 # Install LUA package manager and some modules
-#RUN cd /root \
-# && ln -sf $OPENRESTY_PREFIX /usr/local/openresty \
-# && curl -sSL http://luarocks.org/releases/luarocks-2.3.0.tar.gz | tar -xvz \
-# && cd luarocks-2.3.0 \
-# && ./configure  --prefix=$OPENRESTY_PREFIX/luajit --with-lua=$OPENRESTY_PREFIX/luajit/ \
-#                 --lua-suffix=jit-2.1.0-beta1 \
-#                 --with-lua-include=$OPENRESTY_PREFIX/luajit/include/luajit-2.1 \
-# && make install;
+RUN cd /root \
+ && ln -sf $OPENRESTY_PREFIX /usr/local/openresty \
+ && curl -sSL http://luarocks.org/releases/luarocks-2.3.0.tar.gz | tar -xvz \
+ && cd luarocks-2.3.0 \
+ && ./configure  --prefix=$OPENRESTY_PREFIX/luajit --with-lua=$OPENRESTY_PREFIX/luajit/ \
+                 --lua-suffix=jit-2.1.0-beta1 \
+                 --with-lua-include=$OPENRESTY_PREFIX/luajit/include/luajit-2.1 \
+ && make install;
 
 # ADD OIDC - not in luarocks
 ADD "https://raw.githubusercontent.com/pingidentity/lua-resty-openidc/master/lib/resty/openidc.lua" /opt/openresty/lualib/resty/openidc.lua
 
 
 # Now install some packages
-#RUN cd /opt/openresty/luajit \
-#   && ./bin/luarocks install lua-resty-session \
-#   && ./bin/luarocks install lua-resty-http \
-#   && ./bin/luarocks install lua-resty-template \
-#  && ./bin/luarocks install inspect \
-#   && chmod +r /opt/openresty/lualib/resty/openidc.lua
+RUN cd /opt/openresty/luajit \
+   && ./bin/luarocks install lua-resty-session \
+   && ./bin/luarocks install lua-resty-http \
+   && ./bin/luarocks install lua-resty-template \
+  && ./bin/luarocks install inspect \
+   && chmod +r /opt/openresty/lualib/resty/openidc.lua
 
 
 # ADD nginx/conf/nginx.conf /opt/openresty/nginx/conf/nginx.conf
 
 WORKDIR $NGINX_PREFIX/
 
-#ENV CLIENT_SECRET KVqDiJZZ59X60egKs0GCUKTR
 
-#ONBUILD RUN rm -rf conf/* html/*
-#ONBUILD COPY nginx $NGINX_PREFIX/
 
 CMD ["nginx", "-g", "daemon off; error_log /dev/stderr info;"]
