--- a/resty/nginx/conf/nginx-oidc-google.conf
+++ b/resty/nginx/conf/nginx-oidc-google.conf
@@ -13,7 +13,7 @@ http {
 
   # ipv6 is causing issues in Docker containers (could be a mac beta thing?)
   # This makes sure dns returns only ipv4 addresses
-  resolver 8.8.8.8 ipv6 = off;
+  resolver 8.8.8.8 ipv6=off;
   # resolver localhost ipv6 = off;
 
 
@@ -23,6 +23,8 @@ http {
   lua_ssl_trusted_certificate "/etc/ssl/certs/ca-certificates.crt";
   lua_ssl_verify_depth 5;
   lua_package_path "$prefix/lualib/?.lua;;";
+  # this does not work for development...
+  # lua_code_cache off;
 
   # cache for discovery metadata documents
   lua_shared_dict discovery 1m;
@@ -73,11 +75,27 @@ http {
         local inspect = require("inspect")
         local udump = inspect(res.user)
 
+        local session = require "resty.session".start()
+        session.data.email = res.user.email
+        session: save()
+        ngx.log(ngx.DEBUG, "user token is", udump)
         ngx.req.set_header("X-USER", res.id_token.sub)
 
+        ngx.redirect("foo")
       }
-
     }
 
+
+    location /foo {
+      content_by_lua_block {
+        ngx.header.content_type = "text/html"
+        local template = require("resty.template")
+        local session = require "resty.session".open()
+        local email = session.data.email
+        ngx.log(ngx.DEBUG, "Session data", email)
+
+        template.render("hello.html", { email = email})
+      }
+    }
   }
 }
