--- a/resty/nginx/conf/nginx-oidc-forgerock.conf
+++ b/resty/nginx/conf/nginx-oidc-forgerock.conf
@@ -13,7 +13,9 @@ http {
 
   # ipv6 is causing issues in Docker containers (could be a mac beta thing?)
   # This makes sure dns returns only ipv4 addresses
-  resolver 8.8.8.8 ipv6 = off;
+  resolver 8.8.8.8 ipv6=off;
+  # resolver localhost ipv6 = off;
+
 
   # lua_ssl_trusted_certificate "root-certs.pem";
   # lua_ssl_trusted_certificate "/opt/openresty/nginx/conf/root-certs.pem";
@@ -21,6 +23,8 @@ http {
   lua_ssl_trusted_certificate "/etc/ssl/certs/ca-certificates.crt";
   lua_ssl_verify_depth 5;
   lua_package_path "$prefix/lualib/?.lua;;";
+  # this does not work for development...
+  # lua_code_cache off;
 
   # cache for discovery metadata documents
   lua_shared_dict discovery 1m;
@@ -41,9 +45,13 @@ http {
             -- ngx.var.scheme.."://"..ngx.var.http_host..opts.redirect_uri_path
           -- unless the scheme is overridden using opts.redirect_uri_scheme or an X-Forwarded-Proto header in the incoming request
           redirect_uri_path = "/redirect_uri",
-          discovery = "https://accounts.google.com/.well-known/openid-configuration",
-          client_id = os.getenv("CLIENT_ID"),
-          client_secret = os.getenv("CLIENT_SECRET"),
+          -- discovery = "http://openam.localtest.me:8080/openam/oauth2/.well-known/openid-configuration",
+          discovery = "http://:8080/openam/oauth2/.well-known/openid-configuration",
+
+          -- client_id = os.getenv("CLIENT_ID"),
+          -- client_secret = os.getenv("CLIENT_SECRET"),
+          client_id = "oidctest",
+          client_secret = "password",
           --authorization_params = {hd = "forgerock.com"},
           --scope = "openid email profile",
           --iat_slack = 600,
@@ -71,10 +79,27 @@ http {
         local inspect = require("inspect")
         local udump = inspect(res.user)
 
+        local session = require "resty.session".start()
+        session.data.email = res.user.email
+        session: save()
+        ngx.log(ngx.DEBUG, "user token is", udump)
         ngx.req.set_header("X-USER", res.id_token.sub)
 
+        ngx.redirect("foo")
       }
-
     }
 
+
+    location /foo {
+      content_by_lua_block {
+        ngx.header.content_type = "text/html"
+        local template = require("resty.template")
+        local session = require "resty.session".open()
+        local email = session.data.email
+        ngx.log(ngx.DEBUG, "Session data", email)
+
+        template.render("hello.html", { email = email})
+      }
+    }
   }
+}
