--- a/resty/docker-compose.yaml
+++ b/resty/docker-compose.yaml
@@ -5,9 +5,8 @@ resty:
      - "80:80"
   environment:
     CLIENT_ID: 1067706085367-26ss8u0g011de4tjcm383ntqebcg6fqk.apps.googleusercontent.com
-    CLIENT_SECRET: KVqDiJZZ59X60egKs0GCUKTR
+    CLIENT_SECRET: 1000000000notsecret
+    CUSTOM_CONF_DIR: "/var/tmp/openresty"
   volumes:
-    - ./nginx/conf/nginx-oidc-forgerock.conf:/opt/openresty/nginx/conf/nginx.conf
-    - ./nginx/html:/opt/openresty/nginx/html
-  extra_hosts:
-    - openam.localtest.me:192.168.1.17
+    - ./config:/var/tmp/openresty
+
