Added Postgres sample

--- a/openidm-postgres/Dockerfile
+++ b/openidm-postgres/Dockerfile
@@ -1,7 +1,12 @@
 # Extend Postgres to be used as an OpenIDM repo
+# See https://hub.docker.com/_/postgres/
 
-FROM postgres:latest
 
-ADD openidm.pgsql /docker-entrypoint-initdb.d/01_init.sql
-ADD default_schema_optimization.pgsql /docker-entrypoint-initdb.d/02_optimize.sql
+FROM postgres:9.6
+
+#ADD 01_openidm.pgsql /docker-entrypoint-initdb.d/01_init.sql
+#ADD default_schema_optimization.pgsql /docker-entrypoint-initdb.d/02_optimize.sql
+
+ADD sql/* /docker-entrypoint-initdb.d/
+
 
