--- a/opendj/Dockerfile
+++ b/opendj/Dockerfile
@@ -1,6 +1,6 @@
 FROM java:8
 
-MAINTAINER warren.strange@gmail.com
+MAINTAINER warren.strange@forgerock.com
 
 WORKDIR /opt
 
@@ -10,19 +10,22 @@ ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
 
 
 # Path to secret file that contains the cn=Directory Manager password
-# Mount a docker volume or K8S secret volume on this
-ENV DIR_MANAGER_PW_FILE /var/secrets/dirmanager.pw
+# Used to configure the image
+# Mount a docker volume or K8S secret volume on /var/secrets/opendj
+# This is the path to the password file
+# If no volume is mounted, a default password is set
+ENV DIR_MANAGER_PW_FILE /var/secrets/opendj/dirmanager.pw
 
 WORKDIR /opt/opendj
 
 # Creating instance.loc consolidates the writable directories under one root
 # We also create the extensions directory
-# We set a default password value here, but this is almost
-# certainly not what you want.
+# We set a dir manager default password value here, but this is almost
+# certainly not what you want. You should mount a secret volume  - see the README
 RUN echo "/opt/opendj/data" > /opt/opendj/instance.loc  && \
     mkdir -p /opt/opendj/data/lib/extensions && \
-    mkdir -p /var/secrets && \
-    echo "password"  > /var/secrets/dirmanager.pw
+    mkdir -p /var/secrets/opendj && \
+    echo "password"  > ${DIR_MANAGER_PW_FILE}
 
 
 ADD Dockerfile /
