--- a/openam/sample/config-embedded/openam.properties
+++ b/openam/sample/config-embedded/openam.properties
@@ -6,23 +6,22 @@ BASE_DIR=/root/openam
 locale=en_US
 PLATFORM_LOCALE=en_US
 AM_ENC_KEY=O6QWwHPO4os+zEz3Nqn/2daAYWyiFE32
+#ADMIN_PWD=password
 ADMIN_PWD=${ADMIN_PWD}
 AMLDAPUSERPASSWD=Passw0rd
 COOKIE_DOMAIN=.test.com
 ACCEPT_LICENSES=true
 
-
-# External Config store
-DATA_STORE=dirServer
+# Embeded Config store
+DATA_STORE=embedded
 DIRECTORY_SSL=SIMPLE
-DIRECTORY_SERVER=opendj
-DIRECTORY_PORT=389
-#DIRECTORY_ADMIN_PORT=4444
-ROOT_SUFFIX=dc=openam,dc=forgerock,dc=org
-
-
+DIRECTORY_SERVER=localhost
+DIRECTORY_PORT=50389
+DIRECTORY_ADMIN_PORT=4444
+DIRECTORY_JMX_PORT=1689
+ROOT_SUFFIX=o=openam
 DS_DIRMGRDN=cn=Directory Manager
-DS_DIRMGRPASSWD=${ADMIN_PWD}
+DS_DIRMGRPASSWD=chang3me
 
 
 # External OpenDJ based user data store
