--- a/openam/sample/docker-compose.yaml
+++ b/openam/sample/docker-compose.yaml
@@ -1,22 +1,6 @@
-# Sample to run opendj config store plus an OpenAM instance
+# Sample to run OpenAM with embedded config store
 version: '2'
 services:
-  opendj:
-    image: forgerock/opendj:latest
-    ports:
-      - "389:389"
-      - "4444:4444"
-    networks:
-      - my-net
-    hostname: opendj
-    environment:
-      # If the directory needs to to be initialized this creates the base DN
-      BASE_DN: dc=openam,dc=forgerock,dc=org
-    volumes:
-    # uncomment to create a persistent directory
-    #    - /tmp/opendj:/opt/opendj/data
-    # This mounts a secret volume for the password and for key/trust stores
-      - ./dj-secrets:/var/secrets/opendj
   openam:
     # If creating a child image use this
     #build: .
@@ -27,9 +11,13 @@ services:
     networks:
        - my-net
     hostname: openam
+    # Mount config volume for OpenAM configuration
+    # Mount secret volume for passwords. keystores, etc. Need DJ password too!
     volumes:
       - ./am-secrets:/var/secrets/openam
-      - ./config:/var/tmp/config
+      - ./dj-secrets:/var/secrets/opendj
+      - ./config-embedded:/var/tmp/config
+# Create a network so DJ and AM are on the same network
 networks:
   my-net:
     driver: bridge
