changed maven to https

--- a/openam-onbuild/Dockerfile
+++ b/openam-onbuild/Dockerfile
@@ -12,7 +12,7 @@ ADD Dockerfile /
 
 #ADD openam.war  /usr/local/tomcat/webapps/openam.war
 
-ENV MVN_REPO=http://maven.forgerock.org/repo/repo/org/forgerock/openam
+ENV MVN_REPO=https://maven.forgerock.org/repo/repo/org/forgerock/openam
 
 ENV OPENAM_VERSION=14.0.0-SNAPSHOT
 
