--- a/opendj/Dockerfile
+++ b/opendj/Dockerfile
@@ -14,7 +14,7 @@ ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
 # If no volume is mounted, a default password is set
 ENV DIR_MANAGER_PW_FILE /var/secrets/opendj/dirmanager.pw
 
-ENV MVN_REPO=http://maven.forgerock.org/repo/repo/org/forgerock/opendj
+ENV MVN_REPO=https://maven.forgerock.org/repo/repo/org/forgerock/opendj
 ENV OPENDJ_VERSION=4.0.0-SNAPSHOT
 
 RUN curl $MVN_REPO/opendj-server-legacy/$OPENDJ_VERSION/opendj-server-legacy-$OPENDJ_VERSION.zip \
