--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <repository>
             <id>forgerock-staging-repository</id>
             <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
+            <url>https://maven.forgerock.org/repo/releases</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -47,7 +47,7 @@
         <repository>
             <id>forgerock-snapshots-repository</id>
             <name>ForgeRock Snapshot Repository</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
+            <url>https://maven.forgerock.org/repo/snapshots</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
