--- a/openam/sample/config-ext/openam.properties
+++ b/openam/sample/config-ext/openam.properties
@@ -17,7 +17,7 @@ DATA_STORE=dirServer
 DIRECTORY_SSL=SIMPLE
 DIRECTORY_SERVER=opendj
 DIRECTORY_PORT=389
-#DIRECTORY_ADMIN_PORT=4444
+DIRECTORY_ADMIN_PORT=4444
 ROOT_SUFFIX=dc=openam,dc=forgerock,dc=org
 
 
