configure external DJ store

--- a/openam/sample/config-ext/openam.properties
+++ b/openam/sample/config-ext/openam.properties
@@ -27,14 +27,14 @@ DS_DIRMGRPASSWD=${DIR_MANAGER_PWD}
 
 # External OpenDJ based user data store
 # We can configure this later
-#USERSTORE_TYPE=LDAPv3ForOpenDS
-#USERSTORE_SSL=SIMPLE
-##USERSTORE_DOMAINNAME=opendj
-#USERSTORE_HOST=opendj
-#USERSTORE_PORT=389
-#USERSTORE_SUFFIX=dc=example,dc=com
-#USERSTORE_MGRDN=cn=Directory Manager
-#USERSTORE_PASSWD=password
+USERSTORE_TYPE=LDAPv3ForOpenDS
+USERSTORE_SSL=SIMPLE
+#USERSTORE_DOMAINNAME=opendj
+USERSTORE_HOST=opendj
+USERSTORE_PORT=389
+USERSTORE_SUFFIX=dc=openam,dc=forgerock,dc=org
+USERSTORE_MGRDN=cn=Directory Manager
+USERSTORE_PASSWD=${DIR_MANAGER_PWD}
 
 # Uncomment to specify the site for the first server in a site configuration
 #LB_SITE_NAME=site1
