--- a/openig/sample-config/config/config.json
+++ b/openig/sample-config/config/config.json
@@ -1,29 +1,54 @@
 {
   "handler": {
+    "name": "MyMainRouter",
     "type": "Router",
-    "audit": "global",
-    "baseURI": "https://forgerock.org:443",
-    "capture": "all"
+    "config": {
+      "defaultHandler": {
+        "config": {
+          "entity": "Message from ConfigJson.MyMainRouter.defaultHandler",
+          "reason": "found",
+          "status": 200
+        },
+        "type": "StaticResponseHandler"
+      },
+      "scanInterval": 1
+    }
   },
   "heap": [
-    {
-      "name": "LogSink",
-      "type": "ConsoleLogSink",
-      "config": {
-        "level": "DEBUG"
-      }
-    },
     {
       "name": "JwtSession",
       "type": "JwtSession"
     },
     {
-      "name": "capture",
+      "name": "MyCapture",
       "type": "CaptureDecorator",
       "config": {
+        "type": "Slf4jLogSink",
         "captureEntity": true,
-        "_captureContext": true
+        "captureExchange": true,
+        "logSink": {
+          "config": {
+            "base": "org.forgerock.openig"
+          }
+        }
+      }
+    },
+    {
+      "name": "CommonClientHandler",
+      "type": "ClientHandler",
+      "config": {
+        "_keyManager": null,
+        "_trustManager": null,
+        "connectionTimeout": "10 seconds",
+        "connections": 64,
+        "disableRetries": true,
+        "disableReuseConnection": true,
+        "hostnameVerifier": "ALLOW_ALL",
+        "numberOfWorkers": 4,
+        "soTimeout": "10 seconds"
       }
     }
-  ]
+  ],
+  "monitor": true
 }
+
