Update default router name to _router so that the IG studio can get to it.

--- a/openig/sample-config/config/config.json
+++ b/openig/sample-config/config/config.json
@@ -1,6 +1,6 @@
 {
   "handler": {
-    "name": "MyMainRouter",
+    "name": "_router",
     "type": "Router",
     "config": {
       "defaultHandler": {
